syntax = "proto3";

package common.v1;
option go_package = "api/common/v1;commonv1"; 

message Metadata {
  string timestamp = 1;
  string request_id = 2;
}

// message Metadata {
//   string timestamp = 1;
//   string request_id = 2;
//   string trace_id = 3;
//   string client_version = 4;
//   string locale = 5;
//   string user_agent = 6;
// }

